機能を追加
